--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             color: var(--dark);
             line-height: 1.6;
+            overflow-x: hidden;
+        }
+
+        html {
+            overflow-x: hidden;
         }
 
         /* ── Navigation ── */
@@ -961,6 +966,32 @@
 
             .hero-text h1 {
                 font-size: 2rem;
+            }
+
+            .hero {
+                padding: 0 1rem;
+            }
+
+            .navbar {
+                padding: 0 1rem;
+            }
+
+            .section {
+                padding: 3rem 1rem;
+            }
+
+            .btn {
+                padding: 0.8rem 1.2rem;
+                font-size: 0.9rem;
+            }
+
+            .hero-buttons {
+                flex-direction: column;
+                align-items: stretch;
+            }
+
+            .hero-buttons .btn {
+                justify-content: center;
             }
         }
 
