--- a/index.html
+++ b/index.html
@@ -1816,7 +1816,11 @@
                 </div>
             </div>
         </div>
-        <form class="contact-form" id="contactForm">
+        <form class="contact-form" id="contactForm" action="https://formsubmit.co/info@solargopro.com" method="POST">
+            <input type="hidden" name="_subject" value="Нова заявка з сайту SolarPro">
+            <input type="hidden" name="_captcha" value="false">
+            <input type="hidden" name="_template" value="table">
+            <input type="hidden" name="_next" value="https://solargopro.com/#contact">
             <div class="form-row">
                 <input type="text" name="name" placeholder="Ваше ім'я *" required>
                 <input type="tel" name="phone" placeholder="Телефон *" required>
@@ -1954,21 +1958,46 @@
         });
     });
 
-    // Form submission
+    // Form submission via FormSubmit
     document.getElementById('contactForm').addEventListener('submit', function(e) {
         e.preventDefault();
 
         const btn = this.querySelector('button[type="submit"]');
         const originalHTML = btn.innerHTML;
+        btn.innerHTML = 'Надсилання...';
+        btn.disabled = true;
 
-        btn.innerHTML = '<svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="20 6 9 17 4 12"/></svg> Заявку надіслано!';
-        btn.style.background = '#10b981';
+        const formData = new FormData(this);
 
-        setTimeout(() => {
-            btn.innerHTML = originalHTML;
-            btn.style.background = '';
-            this.reset();
-        }, 3000);
+        fetch(this.action, {
+            method: 'POST',
+            body: formData,
+            headers: { 'Accept': 'application/json' }
+        })
+        .then(response => {
+            if (response.ok) {
+                btn.innerHTML = '<svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="20 6 9 17 4 12"/></svg> Заявку надіслано!';
+                btn.style.background = '#10b981';
+                this.reset();
+            } else {
+                btn.innerHTML = 'Помилка. Спробуйте ще раз';
+                btn.style.background = '#ef4444';
+            }
+            setTimeout(() => {
+                btn.innerHTML = originalHTML;
+                btn.style.background = '';
+                btn.disabled = false;
+            }, 3000);
+        })
+        .catch(() => {
+            btn.innerHTML = 'Помилка. Спробуйте ще раз';
+            btn.style.background = '#ef4444';
+            setTimeout(() => {
+                btn.innerHTML = originalHTML;
+                btn.style.background = '';
+                btn.disabled = false;
+            }, 3000);
+        });
     });
 
     // Calculator logic
