--- a/index.html
+++ b/index.html
@@ -1958,8 +1958,47 @@
         });
     });
 
-    // Form submission — direct POST for FormSubmit activation
-    // After activation, this will be upgraded to AJAX
+    // Form submission via FormSubmit (AJAX)
+    document.getElementById('contactForm').addEventListener('submit', function(e) {
+        e.preventDefault();
+
+        const btn = this.querySelector('button[type="submit"]');
+        const originalHTML = btn.innerHTML;
+        btn.innerHTML = 'Надсилання...';
+        btn.disabled = true;
+
+        const formData = new FormData(this);
+
+        fetch(this.action, {
+            method: 'POST',
+            body: formData,
+            headers: { 'Accept': 'application/json' }
+        })
+        .then(response => {
+            if (response.ok) {
+                btn.innerHTML = '<svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="20 6 9 17 4 12"/></svg> Заявку надіслано!';
+                btn.style.background = '#10b981';
+                this.reset();
+            } else {
+                btn.innerHTML = 'Помилка. Спробуйте ще раз';
+                btn.style.background = '#ef4444';
+            }
+            setTimeout(() => {
+                btn.innerHTML = originalHTML;
+                btn.style.background = '';
+                btn.disabled = false;
+            }, 3000);
+        })
+        .catch(() => {
+            btn.innerHTML = 'Помилка. Спробуйте ще раз';
+            btn.style.background = '#ef4444';
+            setTimeout(() => {
+                btn.innerHTML = originalHTML;
+                btn.style.background = '';
+                btn.disabled = false;
+            }, 3000);
+        });
+    });
 
     // Calculator logic
     const calcCheckboxes = document.querySelectorAll('#calcDevices input[type="checkbox"]');
