Update work schedule: Mon-Fri 08-20, consultations 7 days

--- a/index.html
+++ b/index.html
@@ -1811,8 +1811,8 @@
                 </div>
                 <div>
                     <h4>Графік роботи</h4>
-                    <p>Щодня: 08:00 - 20:00</p>
-                    <p>7 днів на тиждень</p>
+                    <p>Пн–Пт: 08:00 - 20:00</p>
+                    <p>Консультації 7 днів на тиждень</p>
                 </div>
             </div>
         </div>
