Update phone to +380737476693 and email to info@solargopro.com

--- a/index.html
+++ b/index.html
@@ -1782,8 +1782,7 @@
                 </div>
                 <div>
                     <h4>Телефон</h4>
-                    <p><a href="tel:+380501234567">+38 (050) 123-45-67</a></p>
-                    <p><a href="tel:+380671234567">+38 (067) 123-45-67</a></p>
+                    <p><a href="tel:+380737476693">+38 (073) 747-66-93</a></p>
                 </div>
             </div>
             <div class="contact-item">
@@ -1792,7 +1791,7 @@
                 </div>
                 <div>
                     <h4>Email</h4>
-                    <p><a href="mailto:info@solarpro.ua">info@solarpro.ua</a></p>
+                    <p><a href="mailto:info@solargopro.com">info@solargopro.com</a></p>
                 </div>
             </div>
             <div class="contact-item">
