--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SolarPro — Енергетичні та інженерні системи</title>
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="favicon-192.png">
+    <link rel="apple-touch-icon" href="favicon-192.png">
+    <meta name="description" content="SolarPro — сонячні електростанції, інвертори резервного живлення, відеоспостереження, охоронна та пожежна сигналізація, контроль доступу, домофонія, комп'ютерні мережі та розумний будинок під ключ по всій Україні.">
+    <meta property="og:title" content="SolarPro — Енергетичні та інженерні системи">
+    <meta property="og:description" content="Резервне живлення, сонячні електростанції, відеоспостереження, сигналізація, контроль доступу, мережі та розумний будинок — під ключ по всій Україні.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://solargopro.com">
+    <meta property="og:image" content="https://solargopro.com/favicon-192.png">
     <style>
         *, *::before, *::after {
             margin: 0;
