Add fire alarm, access control, intercom to Engineering pricing card

--- a/index.html
+++ b/index.html
@@ -1559,6 +1559,9 @@
             <ul>
                 <li>Відеоспостереження</li>
                 <li>Охоронна сигналізація</li>
+                <li>Пожежна сигналізація</li>
+                <li>Контроль доступу</li>
+                <li>Домофонія</li>
                 <li>Комп'ютерні мережі / Wi-Fi</li>
                 <li>Розумний будинок</li>
                 <li>Гарантія 1 рік</li>
