--- a/index.html
+++ b/index.html
@@ -1562,6 +1562,7 @@
                 <li>Пожежна сигналізація</li>
                 <li>Контроль доступу</li>
                 <li>Домофонія</li>
+                <li>Автоматика для воріт</li>
                 <li>Комп'ютерні мережі / Wi-Fi</li>
                 <li>Розумний будинок</li>
                 <li>Гарантія 1 рік</li>
