Add gate automation service card to Engineering tab

--- a/index.html
+++ b/index.html
@@ -1394,6 +1394,19 @@
             </div>
             <div class="service-card">
                 <div class="service-icon">
+                    <svg width="30" height="30" viewBox="0 0 24 24" fill="none" stroke="#f59e0b" stroke-width="2"><rect x="2" y="18" width="20" height="4" rx="1"/><path d="M4 18V8a2 2 0 012-2h12a2 2 0 012 2v10"/><line x1="12" y1="6" x2="12" y2="18"/><path d="M8 11l4-3 4 3"/></svg>
+                </div>
+                <h3>Автоматика для воріт</h3>
+                <p>Встановлення автоматичних приводів для відкатних, розпашних та секційних воріт з дистанційним керуванням.</p>
+                <ul>
+                    <li>Відкатні та розпашні ворота</li>
+                    <li>Секційні та ролетні ворота</li>
+                    <li>Шлагбауми</li>
+                    <li>Дистанційне керування</li>
+                </ul>
+            </div>
+            <div class="service-card">
+                <div class="service-icon">
                     <svg width="30" height="30" viewBox="0 0 24 24" fill="none" stroke="#f59e0b" stroke-width="2"><path d="M3 9l9-7 9 7v11a2 2 0 01-2 2H5a2 2 0 01-2-2z"/><circle cx="12" cy="14" r="2"/><path d="M16.24 7.76a6 6 0 010 8.49"/><path d="M19.07 4.93a10 10 0 010 14.14"/></svg>
                 </div>
                 <h3>Розумний будинок</h3>
