Add gate automation brands to equipment card

--- a/index.html
+++ b/index.html
@@ -1454,7 +1454,7 @@
             </div>
             <div>
                 <h3>Преміум та бюджетне обладнання</h3>
-                <p>Енергетика: Huawei, Growatt, Deye, Fronius, JA Solar, Longi, Solis, Megarevo. Бюджетні: Must, Sungrow, Sako та ін. Слаботочка: Hikvision, Dahua, TVT, Ajax, Satel, Оріон, MikroTik та ін.</p>
+                <p>Енергетика: Huawei, Growatt, Deye, Fronius, JA Solar, Longi, Solis, Megarevo. Бюджетні: Must, Sungrow, Sako та ін. Слаботочка: Hikvision, Dahua, TVT, Ajax, Satel, Оріон, MikroTik та ін. Автоматика для воріт: CAME, Nice, BFT, Alutech, AN-Motors та ін.</p>
             </div>
         </div>
         <div class="benefit-card">
