Add gate automation brands to FAQ

--- a/index.html
+++ b/index.html
@@ -1788,7 +1788,7 @@
                 <span class="arrow">&#9660;</span>
             </button>
             <div class="faq-answer">
-                <p>Ми працюємо з провідними брендами слаботочного обладнання: відеоспостереження — Hikvision, Dahua, TVT; охоронна та пожежна сигналізація — Ajax, Satel, Оріон; мережеве обладнання — MikroTik. Підбираємо оптимальне рішення під бюджет та задачі клієнта — від бюджетних до преміум варіантів. Все обладнання має офіційну гарантію виробника.</p>
+                <p>Ми працюємо з провідними брендами слаботочного обладнання: відеоспостереження — Hikvision, Dahua, TVT; охоронна та пожежна сигналізація — Ajax, Satel, Оріон; мережеве обладнання — MikroTik; автоматика для воріт — CAME, Nice, BFT, Alutech, AN-Motors. Підбираємо оптимальне рішення під бюджет та задачі клієнта — від бюджетних до преміум варіантів. Все обладнання має офіційну гарантію виробника.</p>
             </div>
         </div>
     </div>
