--- a/index.html
+++ b/index.html
@@ -1630,6 +1630,12 @@
             </div>
             <div style="padding: 1.2rem;"><h4 style="font-size: 1rem; color: var(--dark); margin-bottom: 0.3rem;">Розумний будинок</h4><p style="color: var(--gray); font-size: 0.85rem;">Автоматизація всіх систем</p></div>
         </div>
+        <div style="background: var(--white); border-radius: 12px; overflow: hidden; border: 1px solid var(--gray-light); box-shadow: 0 4px 15px rgba(0,0,0,0.06);">
+            <div style="height: 200px; background: linear-gradient(135deg, #1e293b, #334155); display: flex; align-items: center; justify-content: center; color: var(--primary); font-size: 3rem;">
+                <svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="#f59e0b" stroke-width="1.5"><rect x="2" y="18" width="20" height="4" rx="1"/><path d="M4 18V8a2 2 0 012-2h12a2 2 0 012 2v10"/><line x1="12" y1="6" x2="12" y2="18"/><path d="M8 11l4-3 4 3"/></svg>
+            </div>
+            <div style="padding: 1.2rem;"><h4 style="font-size: 1rem; color: var(--dark); margin-bottom: 0.3rem;">Автоматика для воріт</h4><p style="color: var(--gray); font-size: 0.85rem;">Відкатні ворота, приватний будинок</p></div>
+        </div>
     </div>
 </section>
 
