Add Huawei inverter photo to portfolio card

--- a/index.html
+++ b/index.html
@@ -1595,10 +1595,10 @@
     </div>
     <div style="max-width: 1200px; margin: 0 auto; display: grid; grid-template-columns: repeat(3, 1fr); gap: 1.5rem;" class="portfolio-grid">
         <div style="background: var(--white); border-radius: 12px; overflow: hidden; border: 1px solid var(--gray-light); box-shadow: 0 4px 15px rgba(0,0,0,0.06);">
-            <div style="height: 200px; background: linear-gradient(135deg, #1e293b, #334155); display: flex; align-items: center; justify-content: center; color: var(--primary); font-size: 3rem;">
-                <svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="#f59e0b" stroke-width="1.5"><path d="M13 2L3 14h9l-1 8 10-12h-9l1-8z"/></svg>
+            <div style="height: 200px; overflow: hidden;">
+                <img src="Inv/photo_2026-02-18_15-16-19.jpg" alt="Резервне живлення котеджу — інвертор Huawei" style="width: 100%; height: 100%; object-fit: cover;">
             </div>
-            <div style="padding: 1.2rem;"><h4 style="font-size: 1rem; color: var(--dark); margin-bottom: 0.3rem;">Резервне живлення котеджу</h4><p style="color: var(--gray); font-size: 0.85rem;">Інвертор 5 кВт + АКБ 10 кВт*год</p></div>
+            <div style="padding: 1.2rem;"><h4 style="font-size: 1rem; color: var(--dark); margin-bottom: 0.3rem;">Резервне живлення котеджу</h4><p style="color: var(--gray); font-size: 0.85rem;">Інвертор Huawei + АКБ</p></div>
         </div>
         <div style="background: var(--white); border-radius: 12px; overflow: hidden; border: 1px solid var(--gray-light); box-shadow: 0 4px 15px rgba(0,0,0,0.06);">
             <div style="height: 200px; background: linear-gradient(135deg, #1e293b, #334155); display: flex; align-items: center; justify-content: center; color: var(--primary); font-size: 3rem;">
