--- a/index.html
+++ b/index.html
@@ -1596,9 +1596,9 @@
     <div style="max-width: 1200px; margin: 0 auto; display: grid; grid-template-columns: repeat(3, 1fr); gap: 1.5rem;" class="portfolio-grid">
         <div style="background: var(--white); border-radius: 12px; overflow: hidden; border: 1px solid var(--gray-light); box-shadow: 0 4px 15px rgba(0,0,0,0.06);">
             <div style="height: 200px; overflow: hidden;">
-                <img src="Inv/photo_2026-02-18_15-16-19.jpg" alt="Резервне живлення котеджу — інвертор Huawei" style="width: 100%; height: 100%; object-fit: cover;">
+                <img src="Inv/photo_2026-02-18_15-14-17.jpg" alt="Резервне живлення котеджу — інвертор Solis + 3 АКБ Sako" style="width: 100%; height: 100%; object-fit: cover;">
             </div>
-            <div style="padding: 1.2rem;"><h4 style="font-size: 1rem; color: var(--dark); margin-bottom: 0.3rem;">Резервне живлення котеджу</h4><p style="color: var(--gray); font-size: 0.85rem;">Інвертор Huawei + АКБ</p></div>
+            <div style="padding: 1.2rem;"><h4 style="font-size: 1rem; color: var(--dark); margin-bottom: 0.3rem;">Резервне живлення котеджу</h4><p style="color: var(--gray); font-size: 0.85rem;">Інвертор Solis + 3 АКБ Sako</p></div>
         </div>
         <div style="background: var(--white); border-radius: 12px; overflow: hidden; border: 1px solid var(--gray-light); box-shadow: 0 4px 15px rgba(0,0,0,0.06);">
             <div style="height: 200px; background: linear-gradient(135deg, #1e293b, #334155); display: flex; align-items: center; justify-content: center; color: var(--primary); font-size: 3rem;">
