--- a/index.html
+++ b/index.html
@@ -1595,8 +1595,8 @@
     </div>
     <div style="max-width: 1200px; margin: 0 auto; display: grid; grid-template-columns: repeat(3, 1fr); gap: 1.5rem;" class="portfolio-grid">
         <div style="background: var(--white); border-radius: 12px; overflow: hidden; border: 1px solid var(--gray-light); box-shadow: 0 4px 15px rgba(0,0,0,0.06);">
-            <div style="height: 350px; overflow: hidden;">
-                <img src="Inv/photo_2026-02-18_15-14-17.jpg" alt="Резервне живлення котеджу — інвертор Solis + 3 АКБ Sako" style="width: 100%; height: 100%; object-fit: cover;">
+            <div>
+                <img src="Inv/photo_2026-02-18_15-14-17.jpg" alt="Резервне живлення котеджу — інвертор Solis + 3 АКБ Sako" style="width: 100%; display: block;">
             </div>
             <div style="padding: 1.2rem;"><h4 style="font-size: 1rem; color: var(--dark); margin-bottom: 0.3rem;">Резервне живлення котеджу</h4><p style="color: var(--gray); font-size: 0.85rem;">Інвертор Solis + 3 АКБ Sako</p></div>
         </div>
