Equal 500px height for all portfolio cards, add Solis 10 kW

--- a/index.html
+++ b/index.html
@@ -1595,37 +1595,37 @@
     </div>
     <div style="max-width: 1200px; margin: 0 auto; display: grid; grid-template-columns: repeat(3, 1fr); gap: 1.5rem;" class="portfolio-grid">
         <div style="background: var(--white); border-radius: 12px; overflow: hidden; border: 1px solid var(--gray-light); box-shadow: 0 4px 15px rgba(0,0,0,0.06);">
-            <div>
-                <img src="Inv/photo_2026-02-18_15-14-17.jpg" alt="Резервне живлення котеджу — інвертор Solis + 3 АКБ Sako" style="width: 100%; display: block;">
+            <div style="height: 500px; overflow: hidden;">
+                <img src="Inv/photo_2026-02-18_15-14-17.jpg" alt="Резервне живлення котеджу — інвертор Solis + 3 АКБ Sako" style="width: 100%; height: 100%; object-fit: cover;">
             </div>
-            <div style="padding: 1.2rem;"><h4 style="font-size: 1rem; color: var(--dark); margin-bottom: 0.3rem;">Резервне живлення котеджу</h4><p style="color: var(--gray); font-size: 0.85rem;">Інвертор Solis + 3 АКБ Sako</p></div>
+            <div style="padding: 1.2rem;"><h4 style="font-size: 1rem; color: var(--dark); margin-bottom: 0.3rem;">Резервне живлення котеджу</h4><p style="color: var(--gray); font-size: 0.85rem;">Інвертор Solis 10 кВт + 3 АКБ Sako</p></div>
         </div>
         <div style="background: var(--white); border-radius: 12px; overflow: hidden; border: 1px solid var(--gray-light); box-shadow: 0 4px 15px rgba(0,0,0,0.06);">
-            <div style="height: 350px; background: linear-gradient(135deg, #1e293b, #334155); display: flex; align-items: center; justify-content: center; color: var(--primary); font-size: 3rem;">
+            <div style="height: 500px; background: linear-gradient(135deg, #1e293b, #334155); display: flex; align-items: center; justify-content: center; color: var(--primary); font-size: 3rem;">
                 <svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="#f59e0b" stroke-width="1.5"><circle cx="12" cy="12" r="5"/><line x1="12" y1="1" x2="12" y2="3"/><line x1="12" y1="21" x2="12" y2="23"/><line x1="4.22" y1="4.22" x2="5.64" y2="5.64"/><line x1="18.36" y1="18.36" x2="19.78" y2="19.78"/><line x1="1" y1="12" x2="3" y2="12"/><line x1="21" y1="12" x2="23" y2="12"/></svg>
             </div>
             <div style="padding: 1.2rem;"><h4 style="font-size: 1rem; color: var(--dark); margin-bottom: 0.3rem;">Сонячна електростанція 10 кВт</h4><p style="color: var(--gray); font-size: 0.85rem;">Приватний будинок, Київська обл.</p></div>
         </div>
         <div style="background: var(--white); border-radius: 12px; overflow: hidden; border: 1px solid var(--gray-light); box-shadow: 0 4px 15px rgba(0,0,0,0.06);">
-            <div style="height: 350px; background: linear-gradient(135deg, #1e293b, #334155); display: flex; align-items: center; justify-content: center; color: var(--primary); font-size: 3rem;">
+            <div style="height: 500px; background: linear-gradient(135deg, #1e293b, #334155); display: flex; align-items: center; justify-content: center; color: var(--primary); font-size: 3rem;">
                 <svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="#f59e0b" stroke-width="1.5"><path d="M23 19a2 2 0 01-2 2H3a2 2 0 01-2-2V8a2 2 0 012-2h4l2-3h6l2 3h4a2 2 0 012 2z"/><circle cx="12" cy="13" r="4"/></svg>
             </div>
             <div style="padding: 1.2rem;"><h4 style="font-size: 1rem; color: var(--dark); margin-bottom: 0.3rem;">Система відеоспостереження</h4><p style="color: var(--gray); font-size: 0.85rem;">8 IP-камер, котедж</p></div>
         </div>
         <div style="background: var(--white); border-radius: 12px; overflow: hidden; border: 1px solid var(--gray-light); box-shadow: 0 4px 15px rgba(0,0,0,0.06);">
-            <div style="height: 350px; background: linear-gradient(135deg, #1e293b, #334155); display: flex; align-items: center; justify-content: center; color: var(--primary); font-size: 3rem;">
+            <div style="height: 500px; background: linear-gradient(135deg, #1e293b, #334155); display: flex; align-items: center; justify-content: center; color: var(--primary); font-size: 3rem;">
                 <svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="#f59e0b" stroke-width="1.5"><path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"/></svg>
             </div>
             <div style="padding: 1.2rem;"><h4 style="font-size: 1rem; color: var(--dark); margin-bottom: 0.3rem;">Охоронна сигналізація Ajax</h4><p style="color: var(--gray); font-size: 0.85rem;">Комплексне рішення для офісу</p></div>
         </div>
         <div style="background: var(--white); border-radius: 12px; overflow: hidden; border: 1px solid var(--gray-light); box-shadow: 0 4px 15px rgba(0,0,0,0.06);">
-            <div style="height: 350px; background: linear-gradient(135deg, #1e293b, #334155); display: flex; align-items: center; justify-content: center; color: var(--primary); font-size: 3rem;">
+            <div style="height: 500px; background: linear-gradient(135deg, #1e293b, #334155); display: flex; align-items: center; justify-content: center; color: var(--primary); font-size: 3rem;">
                 <svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="#f59e0b" stroke-width="1.5"><path d="M5 12.55a11 11 0 0114.08 0"/><path d="M1.42 9a16 16 0 0121.16 0"/><path d="M8.53 16.11a6 6 0 016.95 0"/><circle cx="12" cy="20" r="1"/></svg>
             </div>
             <div style="padding: 1.2rem;"><h4 style="font-size: 1rem; color: var(--dark); margin-bottom: 0.3rem;">Комп'ютерна мережа, Mesh Wi-Fi</h4><p style="color: var(--gray); font-size: 0.85rem;">Приватний будинок 250 м2</p></div>
         </div>
         <div style="background: var(--white); border-radius: 12px; overflow: hidden; border: 1px solid var(--gray-light); box-shadow: 0 4px 15px rgba(0,0,0,0.06);">
-            <div style="height: 350px; background: linear-gradient(135deg, #1e293b, #334155); display: flex; align-items: center; justify-content: center; color: var(--primary); font-size: 3rem;">
+            <div style="height: 500px; background: linear-gradient(135deg, #1e293b, #334155); display: flex; align-items: center; justify-content: center; color: var(--primary); font-size: 3rem;">
                 <svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="#f59e0b" stroke-width="1.5"><rect x="2" y="18" width="20" height="4" rx="1"/><path d="M4 18V8a2 2 0 012-2h12a2 2 0 012 2v10"/><line x1="12" y1="6" x2="12" y2="18"/><path d="M8 11l4-3 4 3"/></svg>
             </div>
             <div style="padding: 1.2rem;"><h4 style="font-size: 1rem; color: var(--dark); margin-bottom: 0.3rem;">Автоматика для воріт</h4><p style="color: var(--gray); font-size: 0.85rem;">Відкатні ворота, приватний будинок</p></div>
